--- a/aluraFlix/style/style.css
+++ b/aluraFlix/style/style.css
@@ -38,9 +38,11 @@ body {
 }
 
 body > img {
-  margin: 0 10px;
+  margin: 5px 15px;
 }
 
 img {
-  max-height: 250px;
+  max-height: 300px;
+  border-radius: 20px;
+  box-shadow: 2px 0px 8px #031833;
 }
