--- a/aluraFlix/style/style.css
+++ b/aluraFlix/style/style.css
@@ -28,6 +28,7 @@ body {
 
 .page-logo {
   width: 200px;
+  border-radius: 0px;
 }
 
 .alura-logo {
@@ -35,6 +36,7 @@ body {
   position: absolute;
   top: 10px;
   right: 10px;
+  border-radius: 0px;
 }
 
 body > img {
